src/test/ui/rfc-2632-const-trait-impl/inherent-impl.stderr
error: `const` cannot modify an inherent impl
  --> $DIR/inherent-impl.rs:11:6
   |
LL | impl const T {}
   |      ^^^^^
   |
   = help: only a trait impl can be `const`

error: aborting due to previous error

